added swagger and validation
